# tickmyshow

./: .gitignore  README.md
contract/tickmyshow/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
contract/tickmyshow/programs/tickmyshow/: Cargo.toml
contract/tickmyshow/programs/tickmyshow/src/: lib.rs
contract/tickmyshow/tests/: tickmyshow.ts
ticketmyshow-client/tickmyshow/: package-lock.json  package.json
ticketmyshow-client/tickmyshow/app/: layout.tsx  page.tsx  providers.tsx
ticketmyshow-client/tickmyshow/app/anchor/: idl.json  setup.ts
ticketmyshow-client/tickmyshow/app/components/: navbar.tsx  ticketQr.tsx  walletbutton.tsx
ticketmyshow-client/tickmyshow/app/createEvent/: create.tsx  createEvent.tsx  createPopu.tsx  page.tsx
ticketmyshow-client/tickmyshow/app/entrypoints/: page.tsx
ticketmyshow-client/tickmyshow/app/minttickets/: mintform.tsx  page.tsx
tickmyshow-client/: package-lock.json  package.json
tickmyshow-client/src/: App.tsx
tickmyshow-client/src/anchor/: idl.ts  setup.ts
tickmyshow-client/src/components/: fetchBalance.tsx
