[package]
name = "tickmyshow"
version = "0.1.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.31.0", default-features = false, features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "metadata"] }
spl-token = { version = "6.0.0", default-features = false, features = ["no-entrypoint"] }
spl-associated-token-account = "6.0.0"

mpl-token-metadata = "5.1.0"



[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

